--- a/app/index.html
+++ b/app/index.html
@@ -33,15 +33,15 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">Presentation</a>
+            <a class="navbar-brand" href="#/"></a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/contact">Contact</a></li>
+              <li><a ui-route ng-href="#/about">About</a></li>
+              <li><a ui-route ng-href="#/instructions">Instructions</a></li>
+              <li><a ui-route ng-href="#/contact">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -54,7 +54,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span></p>
+        <p><span class="glyphicon glyphicon-fire"></span></p>
       </div>
     </div>
 
@@ -77,6 +77,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/contact.js"></script>
+        <script src="scripts/controllers/instructions.js"></script>
         <!-- endbuild -->
 </body>
 </html>
